changes in user-module, completed Item-module